--- a/node/package.json
+++ b/node/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "postinstall": "node dataset_generator && node feature_extractor && node run_evaluation"
+  },
   "dependencies": {
     "canvas": "^2.11.2"
   }
